client/jetpack-connect/jetpack-new-site/style.scss
// Structure
.jetpack-new-site {
	max-width: 960px;
	margin: 35px auto 0;
	text-align: center;

	@include breakpoint( "<660px" ) {
		margin-top: 15px;
	}
}

.jetpack-new-site__header {
	margin-bottom: 3em;

	@include breakpoint( "<660px" ) {
		margin: 0 2em 2em;
	}
}

.jetpack-new-site__header-title {
	margin-bottom: .35em;
	font-size: 34px;
	font-weight: 300;
	color: $gray-dark;
}

.jetpack-new-site__header-text {
	font-size: 16px;
	color: $gray;
}

.jetpack-new-site__content {
	display: flex;
	align-items: stretch;
	justify-content: center;
	padding-bottom: 2em;
}

.jetpack-new-site__wpcom-site,
.jetpack-new-site__jetpack-site {
	z-index: 1;
	display: flex;
	flex-direction: column;
	width: 360px;
	margin: 0px;
	transition: transform .25s ease, box-shadow .35s ease, z-index .15s ease;

	&:hover {
		z-index: 3;
		transform: scale(1.075);
		box-shadow: 0 0 0 1px transparentize( $gray-lighten-20, .5 ),
		0 1px 2px $gray-lighten-30, 0 7px 18px transparentize( lighten( $gray, 15% ), .5 );
		transition: transform .25s ease, box-shadow .35s ease, z-index .175s ease;
	}

	@include breakpoint( "<660px" ) {
		display: none;
	}
}

.jetpack-new-site__wpcom-site .wordpress-logo,
.jetpack-new-site__jetpack-site .jetpack-logo {
	flex: 1;
	max-width: 72px;
	max-height: 72px;
	margin: 1.5em auto;
	transition: .25s transform ease;
}

.jetpack-new-site__wpcom-site .wordpress-logo {
	fill: $blue-wordpress;
}

.jetpack-new-site__jetpack-site .jetpack-logo {
	fill: $green-jetpack;
}

.jetpack-new-site__card-title {
	margin-bottom: .75em;
	font-size: 24px;
	line-height: 1.25em;
}

.jetpack-new-site__card-description {
	margin-bottom: 1em;
	color: lighten( $gray-dark, 25% );
}

.jetpack-new-site__button-holder {
	display: flex;
	flex: 1;
	align-self: flex-end;
	width: 100%;
}

.jetpack-new-site__wpcom-site {
	
	.button {
		align-self: flex-end;
		width: 100%;
		margin-top: 16px;
	}
}

.jetpack-new-site__jetpack-site,
.jetpack-new-site__mobile-jetpack-site {

	.jetpack-connect__connect-button-card {
		background: transparent;
	}

	.jetpack-connect__site-address-container  {
		position: relative;

		.gridicon {
			position: absolute;
			top: 8px;
			left: 8px;
			color: $gray-lighten-20;
		}

		.form-text-input {
			padding-left: 40px;
		}

		.spinner {
			position: absolute;
			right: 8px;
			top: 10px;
		}
	}

	label {
		display: none;
	}

	input[type=text] {
		&:focus {
			border-color: $green-jetpack;
			box-shadow: 0 0 0 2px lighten( $green-jetpack, 25% );
		}
	}

	.button {
		width: 100%;
		margin-top: 16px;
		background: $green-jetpack;
		border-color: darken( $green-jetpack, 15% );

		&:hover,
		&:focus {
			border-color: darken( $green-jetpack, 30% );
		}

		&:focus {
			box-shadow: 0 0 0 2px lighten( $green-jetpack, 25% );
		}

		&[disabled],
		&:disabled {
			background: tint( $green-jetpack, 50% );
			border-color: tint( $green-jetpack, 35% );
			color: $white;
		}
	}
}

.jetpack-new-site__mobile {
	display: none;
	width: 100%;
	padding: 36px;

	@include breakpoint( "<660px" ) {
		display: block;
	}
}

.jetpack-new-site__mobile-wpcom-site {
	.button {
		width: 100%;
	}
}

.jetpack-new-site__mobile-jetpack-site {
	.jetpack-connect__connect-button-card {
		margin: 16px 0 0;
		padding: 0;
		border: none;
	}
}

.jetpack-new-site__divider {
	display: none;
	position: relative;
	margin: 32px 0;

	&:after {
		content: "";
		position: absolute;
		top: 50%;
		left: 0;
		z-index: 1;
		width: 100%;
		height: 1px;
		background: transparentize( $gray-lighten-20, .5 );
	}

	span {
		position: relative;
		z-index: 2;
		padding: 8px;
		color: $gray;
		background: $white;
	}

	@include breakpoint( "<660px" ) {
		display: block;
	}
}

// Include Reader Back styles because they're not part of the main bundle
// See: https://github.com/Automattic/wp-calypso/pull/19147
.reader-full-post__back-container {
	margin: 0;
	position: fixed;
		top: 47px;
		left: 0;
	z-index: z-index( '.masterbar', '.reader-back'	);

	.button.is-compact.is-borderless {
		padding: 18px 40px 18px 20px;

		@include breakpoint( "<660px" ) {
			padding: 20px 8px 16px;
		}
	}

	@include breakpoint( "<660px" ) {
		top: 0;
		left: 0;
		right: 0;
		height: 46px;
		background: $white;
		border-bottom: 1px solid $gray-light;
	}
}

